change margin and move layouts to themes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         {{ else }}
-                        <div class="markdown has-text-centered">
+                        <div class="markdown has-text">
                             {{ .Content }}
                         </div>
                         {{ end }}
