--- a/layouts/partials/footer/text.html
+++ b/layouts/partials/footer/text.html
@@ -6,6 +6,7 @@
         <span class="footer-text">
             {{ i18n "footer_text" . | markdownify }}
         </span>
+        <p>Hosted by <a href="https://pages.coding.me" style="font-weight: bold">Coding Pages</a></p>
     {{ end }}
     </div>
 </div>
