--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -22,7 +22,7 @@
         {{ end }}
 
         {{ end }}
-        <h2 class="title is-2 top-pad">{{ i18n "index_blog_allPosts" . }}</h2>
+        <!-- <h2 class="title is-2 top-pad">{{ i18n "index_blog_allPosts" . }}</h2> -->
         {{ partialCached "blog/li.html" . }}
     </div>
 {{ end }}
