--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -9,10 +9,10 @@
         <h2 class="title is-1 top-pad strong-post-title">
             <a href="{{ .Permalink }}">{{ .Title }}</a>
         </h2>
-        <div class="post-data">
+        <!-- <div class="post-data">
             {{ if .Params.date }}{{ .Date.Format (.Site.Params.dateFormat | default "Jan 02, 2006") }} |{{ end }}
             {{ i18n "blog_readingTime" .ReadingTime }}
-        </div>
+        </div> -->
         {{ if or .Site.Params.share.twitter .Site.Params.share.facebook .Site.Params.share.pinterest .Site.Params.share.googlePlus }}
         <div class="blog-share">
             {{ i18n "blog_shareThis" . }}:
