--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -16,3 +16,13 @@
     {{ $style := resources.Get . }}
     <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous" media="screen">
 {{- end }}
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?478b1ceced7171f222aed94dc4f8a04b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
