--- a/layouts/partials/footer/text.html
+++ b/layouts/partials/footer/text.html
@@ -6,6 +6,9 @@
         <span class="footer-text">
             {{ i18n "footer_text" . | markdownify }}
         </span>
+        <p>
+        <a href='http://www.beian.miit.gov.cn/' target='_blank' style="font-size:12.8px;color:#4A4A4A">粤ICP备19072716号-1</a>
+        </p>
     {{ end }}
     </div>
 </div>
