--- a/layouts/partials/footer/text.html
+++ b/layouts/partials/footer/text.html
@@ -9,6 +9,7 @@
         <p>
         <a href='http://www.beian.miit.gov.cn/' target='_blank' style="font-size:12.8px;color:#4A4A4A">粤ICP备19072716号-1</a>
         </p>
+        <script type="text/javascript" src="//js.users.51.la/20196435.js"></script>
     {{ end }}
     </div>
 </div>
